--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
+    "kioskboard": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.2",
+    "simple-keyboard": "^3.5.59",
     "swr": "^2.1.5"
   },
   "devDependencies": {
