--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.9",
     "axios": "^1.3.6",
+    "jspdf": "^2.5.1",
     "kioskboard": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
